<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image" />

    <!-- Loader -->
    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Digite o nome da cidade"
            android:inputType="text" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Consultar"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Não foi possível encontrar o clima de uma cidade com este nome."
            android:visibility="gone"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="16dp" />

        <!-- Results Container with Background -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/resultContainer"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/result_background">

            <!-- Nome da Cidade com Ícones -->

            <!-- Temperatura -->

            <!-- Descrição -->

            <!-- Detalhes Clima -->

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="136dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <!-- Ícone do Mapa -->
                <ImageView
                    android:id="@+id/mapIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/map_icon"
                    android:src="@drawable/ic_mapa" />

                <!-- Nome da Cidade -->
                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!-- Ícone da Bandeira -->
                <ImageView
                    android:id="@+id/flagImageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/country_flag"
                    android:src="@null"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/temperature" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="116dp"
                android:columnCount="2"
                android:rowCount="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description">

                <!-- Umidade -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iconUmidity"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/umidity_icon"
                        android:src="@drawable/ic_droplet" />

                    <TextView
                        android:id="@+id/umidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Umidade: 0%"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Vento -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iconWind"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/wind_icon"
                        android:src="@drawable/ic_wind" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vento: 0 km/h"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Temp Máx -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iconTempMax"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/temp_max_icon"
                        android:src="@drawable/ic_temp_max" />

                    <TextView
                        android:id="@+id/tempMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Temp Máx: 0°C"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Temp Mín -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iconTempMin"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/temp_min_icon"
                        android:src="@drawable/ic_temp_min" />

                    <TextView
                        android:id="@+id/tempMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Temp Mín: 0°C"
                        android:textSize="16sp" />
                </LinearLayout>

            </GridLayout>

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="28dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</RelativeLayout>
